deploy/buildconfig/omc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"openshift-mini-console:latest","namespace":"omc-app"},"fieldPath":"spec.template.spec.containers[?(@.name==\"openshift-mini-console\")].image"}]'
  labels:
    app: omc-app
    app.kubernetes.io/component: omc-app
    app.kubernetes.io/instance: omc-app
  name: openshift-mini-console
  namespace: omc-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: omc-app
      deployment: omc-app
  strategy: {}
  template:
    metadata:
      labels:
        app: omc-app
        deployment: omc-app
    spec:
      serviceAccountName: openshift-mini-console-sa
      containers:
        - image: " "
          name: openshift-mini-console
          ports:
            - containerPort: 5000
              name: flask
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: 5000
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 10
