deploy/buildconfig/omc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: omc-app
    app.kubernetes.io/component: omc-app
    app.kubernetes.io/instance: omc-app
  name: openshift-mini-console
  namespace: omc-app
spec:
  ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    deployment: openshift-mini-console
