deploy/buildconfig/omc-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: omc-app
    app.kubernetes.io/component: omc-app
    app.kubernetes.io/instance: omc-app
  name: openshift-mini-console
  namespace: omc-app
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 5000-tcp
  to:
    kind: Service
    name: openshift-mini-console
    weight: 100
